working to fix footer alignment on mobile ~AMP

--- a/ampstack.css
+++ b/ampstack.css
@@ -98,11 +98,24 @@ h5 {
 
 .flex-footer {
   /*background-color: cornflowerblue;*/
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   align-content: center;
+
   width: 100%;
   height: 70px;
   margin: 10px;
